# codestorm_hackathon

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  ruff.yml
data/: credit_lending_data.csv  data_science_dataset.csv  farm_enterprise.csv  farmer_profile.csv  general_model_data.csv  loan_record.csv  synthetic_nigerian_farmer_data.csv
data_assets/: analysis.py  data_gen.py  data_generator.py  generator.py  helper_cl.py  helper_ds.py  helper_gm.py  models.py
notebook/: ds.ipynb
risk_assessment_app/code/: streamlit_risk_app.py
risk_assessment_app/model_artifacts/: feature_names.joblib  mitigation_kb.joblib  model.py  original_columns.joblib  preprocessor.joblib  streamlit_risk_app.py  xgb_risk_model.joblib
simplified_farmer_data_output/: farm_enterprises.csv  farmer_profiles.csv  loan_records.csv
simplified_farmer_data_output_v2/: farm_enterprises.csv  farmer_profiles.csv  loan_records.csv
streamlit_app/: app.py
streamlit_app/.ipynb_checkpoints/: README (1)-checkpoint.md
streamlit_app/model/: codestorm_model.ipynb  model_data.csv  model_report.md
technical_docs/: CL.md  DS.md  GC.md  MasterTD.md
